updated to allow registeration

--- a/src/main/resources/bootstrap.yml
+++ b/src/main/resources/bootstrap.yml
@@ -23,4 +23,8 @@ zuul:
       path: /auth/test
       service-id: PatientOnboard-AuthenticationService
       strip-prefix: false
+    register:
+      path: /auth/registerUser
+      service-id: PatientOnboard-AuthenticationService
+      strip-prefix: false
       
